PP-12360 Add Stripe tests for SubmitRefund by account ID and type